--- a/SalesWebMvc/Views/SalesRecords/Index.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/Index.cshtml
@@ -5,7 +5,7 @@
 <h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-6">
-        <form class="form-horizontal" asp-action="SimpleSearchAsync">
+        <form class="form-horizontal" asp-action="SimpleSearch">
             <fieldset>
                 <legend>Simple search</legend>
                 <div class="form-group">
@@ -32,7 +32,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <form class="form-horizontal" asp-action="GroupingSearchAsync">
+        <form class="form-horizontal" asp-action="GroupingSearch">
             <fieldset>
                 <legend>Grouping search</legend>
                 <div class="form-group">
